# agentgrunt

./: .gitignore  README.md  main.py  notes.md  pyproject.toml  repo_mgmt.py  utils.py
agentgrunt/: main.py  repo_mgmt.py
agentgrunt/gpt_tools/: README_ai.md
giterpreter/: main.py
gpt_tools/: README_ai.md  __init__.py  code_exploration.py  code_exploration_docs.md
gptmonkey/: main.py
gptmonkey/gpt_tools/: README_ai.md  code_exploration.py
tests/: code_exploration_tests.py  test_code_exploration.py
