[tool.poetry]
name = "giterpreter"
version = "0.1.0"
description = ""
authors = ["Nik V <github@nikvdp.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
