[tool.poetry]
name = "giterpreter"
version = "0.1.0"
description = ""
authors = ["Nik V <github@nikvdp.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pydantic = "^2.1.1"
plumbum = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
